--- a/Final_project.ipynb
+++ b/Final_project.ipynb
@@ -18,7 +18,7 @@
     "How do different levels of global warming change local climates?\n",
     "\n",
     "### Our data\n",
-    "NCA5 Atlas Data \n",
+    "**NCA5 Atlas Data**\n",
     "* Projections at 1.5, 2, 3, and 4 C of global warming - NOT time bound\n",
     "* Statistically downscaled CMIP6 projections (LOCA2 and STAR protocols), averaged for whole counties\n",
     "* Data for all counties in the contiguous U.S. and Alaska, Hawaii, and Puerto Rico as whole areas _for some variables_\n",
@@ -696,13 +696,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 42,
    "id": "ecc7fe92-e6e3-4a36-9c67-aaf99c638c12",
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
+    "# Doing the same for the other datasets\n",
     "file_path_2 = \"NCA_Atlas_GWL_2C_-2110005955286935887.csv\"\n",
     "df_2 = pd.read_csv(file_path_2)\n",
     "df_2['county_and_state'] = df_2['County name'] + ', ' + df_2['State abbreviation']\n",
